# house-price-prediction-app

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
artifact/dataset/: test.csv  train.csv
artifact/model/: model.pkl  report_20250813_174018.csv  report_20250813_174343.csv  report_20250814_103038.csv  report_20250814_103405.csv  report_20250814_104351.csv  report_20250814_104836.csv  report_20250814_113256.csv
artifact/preprocessor/: preprocessor.pkl
config/: config.yaml  model_config.yaml
exception/: custom_exception.py
logger/: custom_logger.py
models/: model.py
notebooks/: HousePrice.ipynb  train.ipynb
src/: utils.py
src/ml_components/: __init__.py  data_ingestion.py  data_tranformation.py  ml_training.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
static/: script.js  style.css  styles.css
templates/: index.html
