[project]
name = "house-price-prediction-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
